--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body {
     background-color: #f9f9f9;
     margin-left: 200px;
     margin-right: 200px;
-    max-width: 1100px;
+    max-width: 80%;
 }
 
 .boardnews {
@@ -148,7 +148,7 @@ nav ul li .dropdown a:hover {
     padding: 15px;
     margin: 40px 10px 0 10px;
     border-radius: 8px;
-    max-width: 450px;
+    max-width: 45%;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
@@ -195,7 +195,7 @@ nav ul li .dropdown a:hover {
     flex-direction: column;
     gap: 25px;
     margin-bottom: 50px;
-    max-width: 650px;      
+    max-width: 60%;      
     margin: 40px auto;
 }
 
@@ -454,7 +454,7 @@ nav ul li .dropdown a:hover {
 }
 
 .contact-cards-container {
-    max-width: 900px;
+    max-width: 80%;
     margin: 40px auto;
     display: flex;
     gap: 25px;
@@ -502,7 +502,7 @@ nav ul li .dropdown a:hover {
 
 /* FORMULÁŘ POD KARTAMI */
 .contact-form-container {
-    max-width: 700px;
+    max-width: 65%;
     margin: 40px auto;
     background: #fff;
     padding: 25px;
@@ -566,24 +566,24 @@ nav ul li .dropdown a:hover {
 .big-article-image {
     display: block;
     border-radius: 10px;
-    max-width: 700px;
+    max-width: 65%;
     margin: 20px auto 40px auto;
 }
 
 .big-article {
     display: grid;
     place-items: center;
-    max-width: 700px;
+    max-width: 65%;
     gap: 20px;
     margin: auto;
     line-height: 1.4
 }
 
 .big-article img {
-    max-width: 600px;
+    max-width: 85%;
     border-radius: 10px;
     display: block;
-    margin: 30px auto;
+    margin: 20px auto;
 }
 
 .big-article p {
@@ -646,7 +646,7 @@ nav ul li .dropdown a:hover {
 
     .articles,
     .second-articles {
-        width: 90%;
+        max-width: 90%;
         margin: 20px auto;
         padding: 0 10px;
     }
@@ -660,7 +660,7 @@ nav ul li .dropdown a:hover {
     }
 
     .article img {
-        width: 100px;
+        width: 120px;
         height: auto;
         flex-shrink: 0;
     }
@@ -711,21 +711,20 @@ nav ul li .dropdown a:hover {
     }
 
     .big-article {
-        max-width: 820px;
+        max-width: 90%;
         margin: 0 auto 80px auto;
         padding: 0 20px;
     }
 
     .big-article-image {
         display: block;
-        width: 100%;
+        max-width: 90%;
         margin: 20px auto 40px auto;
         border-radius: 12px;
     }
 
     .big-article img {
-        width: 100%;
-        max-width: 820px;
+        max-width: 90%;
     }
 
 }
