--- a/static/style.css
+++ b/static/style.css
@@ -391,7 +391,7 @@ nav ul li .dropdown a:hover {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-width: 900px;
+    max-width: 75%;
     margin: 0 auto;
 }
 
